# rust-piscine

./: Cargo.toml
adding/src/: lib.rs  tests.rs
adding_twice/src/: lib.rs  tests.rs
arrange_it/src/: lib.rs
banner/src/: lib.rs
bigger/src/: lib.rs
blood_types/src/: lib.rs  tests.rs
border_cross/src/: lib.rs  tests.rs
borrow_box/src/: lib.rs  tests.rs
borrow_me_the_reference/src/: lib.rs
box_it/src/: lib.rs  tests.rs
box_recursion/src/: lib.rs  tests.rs
boxing_todo/src/: err.rs  lib.rs  tests.rs
capitalizing/src/: lib.rs
card_deck/src/: lib.rs
changes/src/: lib.rs
cipher/src/: lib.rs
circle/src/: lib.rs
closures/src/: lib.rs  tests.rs
collect/src/: lib.rs
commits_stats/src/: lib.rs  tests.rs
copy/src/: lib.rs
delete_prefix/src/: lib.rs  tests.rs
diamond_creation/src/: lib.rs  tests.rs
does_it_fit/src/: lib.rs  tests.rs
drop_the_thread/src/: lib.rs  tests.rs
easy_traits/src/: lib.rs  tests.rs
error_types/src/: lib.rs
events/src/: lib.rs  tests.rs
expected_variable/: Cargo.toml
expected_variable/src/: lib.rs  tests.rs
fibonacci2/src/: lib.rs
find_factorial/src/: lib.rs
generics/src/: lib.rs  tests.rs
generics_list/src/: lib.rs  tests.rs
get_products/src/: lib.rs  tests.rs
groceries/src/: lib.rs
handling/src/: lib.rs
hashing/src/: lib.rs
highest/src/: lib.rs  tests.rs
how_many_references/src/: lib.rs  tests.rs
iterators/src/: lib.rs  tests.rs
lalgebra_scalar/src/: lib.rs  tests.rs
lalgebra_vector/: Cargo.toml
lalgebra_vector/src/: lib.rs  tests
lifetimes/: Cargo.toml
lifetimes/src/: lib.rs  tests.rs
logic_number/src/: lib.rs  tests.rs
looping/src/: main.rs
macro_calculator/src/: lib.rs  tests.rs
matrix/src/: lib.rs  tests.rs
matrix_mult/: Cargo.toml
matrix_mult/src/: lib.rs  tests.rs
matrix_ops/: Cargo.toml
matrix_ops/src/: lib.rs  tests.rs
matrix_transposition/src/: lib.rs
middle_day/src/: lib.rs  tests.rs
mobs/src/: boss.rs  lib.rs  member.rs  mobs.rs  tests.rs
mobs/src/mobs/: member.rs
name_initials/src/: lib.rs
ordinal/src/: lib.rs  tests.rs
ownership/src/: lib.rs
pangram/src/: lib.rs  tests.rs
panic/src/: lib.rs
pig_latin/src/: lib.rs  tests.rs
profanity_filter/src/: lib.rs
project_motion/src/: lib.rs  tests.rs
ref_cell/src/: lib.rs  tests.rs
rgb_match/src/: lib.rs  tests.rs
roman_numbers/src/: lib.rs  tests.rs
roman_numbers_iter/: Cargo.toml
roman_numbers_iter/src/: lib.rs  roman.rs  tests.rs
rot/src/: lib.rs  tests.rs
sales/src/: lib.rs  tests.rs
scalar/src/: lib.rs
scores/src/: lib.rs  tests.rs
scytale_cipher/src/: lib.rs  tests.rs
searching/src/: lib.rs
shopping_mall/src/: lib.rs  tests.rs
simple_hash/src/: lib.rs
slices_to_map/src/: lib.rs  tests.rs
spelling/src/: lib.rs  tests.rs
src/: main.rs
stars/src/: lib.rs  tests.rs
step_iterator/src/: lib.rs  tests.rs
string_permutation/src/: lib.rs
talking/src/: lib.rs  tests.rs
temperature_conv/src/: lib.rs
tic_tac_toe/src/: lib.rs
to_url/src/: lib.rs
traits/src/: lib.rs  tests.rs
unwrap_or_expect/src/: lib.rs
vector_operations/src/: lib.rs  tests.rs
