[package]
name = "piscine-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
arrange_it = { version = "0.1.0", path = "arrange_it" }
arrays = { version = "0.1.0", path = "arrays" }
banner = { version = "0.1.0", path = "banner" }
bigger = { version = "0.1.0", path = "bigger" }
borrow = { version = "0.1.0", path = "borrow" }
borrow_me_the_reference = { version = "0.1.0", path = "borrow_me_the_reference" }
capitalizing = { version = "0.1.0", path = "capitalizing" }
card_deck = { version = "0.1.0", path = "card_deck" }
changes = { version = "0.1.0", path = "changes" }
circle = { version = "0.1.0", path = "circle" }
collect = { version = "0.1.0", path = "collect" }
copy = { version = "0.1.0", path = "copy" }
division_and_remainder = { version = "0.1.0", path = "division_and_remainder" }
doubtful = { version = "0.1.0", path = "doubtful" }
fibonacci2 = { version = "0.1.0", path = "fibonacci2" }
find_factorial = { version = "0.1.0", path = "find_factorial" }
groceries = { version = "0.1.0", path = "groceries" }
hashing = { version = "0.1.0", path = "hashing" }
matrix_transposition = { version = "0.1.0", path = "matrix_transposition" }
name_initials = { version = "0.1.0", path = "name_initials" }
ownership = { version = "0.1.0", path = "ownership" }
reverse_string = { version = "0.1.0", path = "reverse_string" }
scalar = { version = "0.1.0", path = "scalar" }
simple_hash = { version = "0.1.0", path = "simple_hash" }
speed_transformation = { version = "0.1.0", path = "speed_transformation" }
string_literals = { version = "0.1.0", path = "string_literals" }
string_permutation = { version = "0.1.0", path = "string_permutation" }
strings = { version = "0.1.0", path = "strings" }
temperature_conv = { version = "0.1.0", path = "temperature_conv" }
tic_tac_toe = { version = "0.1.0", path = "tic_tac_toe" }
to_url = { version = "0.1.0", path = "to_url" }
tuples_refs = { version = "0.1.0", path = "tuples_refs" }

[workspace]
members = [ "arrange_it", "arrays", "banner", "bigger", "borrow", "borrow_me_the_reference", "capitalizing", "card_deck", "changes", "circle", "collect", "copy", "division_and_remainder", "doubtful", "edit_distance", "fibonacci2", "find_factorial", "groceries", "handling", "hashing", "looping", "matrix_transposition", "name_initials", "ownership", "panic", "profanity_filter", "question_mark", "reverse_string","scalar", "simple_hash", "speed_transformation", "string_literals", "string_permutation", "strings", "temperature_conv", "tic_tac_toe", "to_url", "tuples_refs", "unwrap_or_expect"]
