[package]
name = "piscine-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
arrange_it = { version = "0.1.0", path = "arrange_it" }
arrays = { version = "0.1.0", path = "arrays" }
banner = { version = "0.1.0", path = "banner" }
bigger = { version = "0.1.0", path = "bigger" }
borrow = { version = "0.1.0", path = "borrow" }
borrow_me_the_reference = { version = "0.1.0", path = "borrow_me_the_reference" }
boxing_todo = { version = "0.1.0", path = "boxing_todo" }
capitalizing = { version = "0.1.0", path = "capitalizing" }
card_deck = { version = "0.1.0", path = "card_deck" }
changes = { version = "0.1.0", path = "changes" }
cipher = { version = "0.1.0", path = "cipher" }
circle = { version = "0.1.0", path = "circle" }
collect = { version = "0.1.0", path = "collect" }
copy = { version = "0.1.0", path = "copy" }
diamond_creation = { version = "0.1.0", path = "diamond_creation" }
division_and_remainder = { version = "0.1.0", path = "division_and_remainder" }
does_it_fit = { version = "0.1.0", path = "does_it_fit" }
doubtful = { version = "0.1.0", path = "doubtful" }
error_types = { version = "0.1.0", path = "error_types" }
expected_variable = { version = "0.1.0", path = "expected_variable" }
fibonacci2 = { version = "0.1.0", path = "fibonacci2" }
find_factorial = { version = "0.1.0", path = "find_factorial" }
groceries = { version = "0.1.0", path = "groceries" }
hashing = { version = "0.1.0", path = "hashing" }
logic_number = { version = "0.1.0", path = "logic_number" }
macro_calculator = { version = "0.1.0", path = "macro_calculator" }
matrix_transposition = { version = "0.1.0", path = "matrix_transposition" }
name_initials = { version = "0.1.0", path = "name_initials" }
ordinal = { version = "0.1.0", path = "ordinal" }
ownership = { version = "0.1.0", path = "ownership" }
pangram = { version = "0.1.0", path = "pangram" }
pig_latin = { version = "0.1.0", path = "pig_latin" }
reverse_string = { version = "0.1.0", path = "reverse_string" }
rgb_match = { version = "0.1.0", path = "rgb_match" }
rot = { version = "0.1.0", path = "rot" }
scalar = { version = "0.1.0", path = "scalar" }
scores = { version = "0.1.0", path = "scores" }
scytale_cipher = { version = "0.1.0", path = "scytale_cipher" }
searching = { version = "0.1.0", path = "searching" }
shopping_mall = { version = "0.1.0", path = "shopping_mall" }
simple_hash = { version = "0.1.0", path = "simple_hash" }
speed_transformation = { version = "0.1.0", path = "speed_transformation" }
spelling = { version = "0.1.0", path = "spelling" }
stars = { version = "0.1.0", path = "stars" }
string_literals = { version = "0.1.0", path = "string_literals" }
string_permutation = { version = "0.1.0", path = "string_permutation" }
strings = { version = "0.1.0", path = "strings" }
talking = { version = "0.1.0", path = "talking" }
temperature_conv = { version = "0.1.0", path = "temperature_conv" }
tic_tac_toe = { version = "0.1.0", path = "tic_tac_toe" }
to_url = { version = "0.1.0", path = "to_url" }
tuples_refs = { version = "0.1.0", path = "tuples_refs" }

[workspace]
members = [ "arrange_it", "arrays", "banner", "bigger", "borrow", "borrow_me_the_reference", "boxing_todo", "capitalizing", "card_deck", "changes", "cipher", "circle", "collect", "copy", "diamond_creation", "division_and_remainder", "does_it_fit", "doubtful", "edit_distance", "error_types", "expected_variable", "fibonacci2", "find_factorial", "groceries", "handling", "hashing", "logic_number", "looping", "macro_calculator", "matrix_transposition", "middle_day", "mobs", "name_initials", "ordinal", "ownership", "pangram", "panic", "pig_latin", "profanity_filter", "question_mark", "reverse_string", "rgb_match", "rot","scalar", "scores", "scytale_cipher", "searching", "shopping_mall", "simple_hash", "speed_transformation", "spelling", "stars", "string_literals", "string_permutation", "strings", "talking", "temperature_conv", "tic_tac_toe", "to_url", "tuples_refs", "unwrap_or_expect"]
